# HoloMotion

./: .gitignore  .gitmodules  NOTICE  README.md  deploy.env  train.env
deployment/: deploy_environment.sh
deployment/unitree_g1_ros2_29dof/: launch_holomotion_29dof.sh  launch_holomotion_29dof_docker.sh  start_container.sh
deployment/unitree_g1_ros2_29dof/src/: CMakeLists.txt
deployment/unitree_g1_ros2_29dof/src/config/: g1_29dof_holomotion.yaml
deployment/unitree_g1_ros2_29dof/src/humanoid_policy/: policy_node_29dof.py
deployment/unitree_g1_ros2_29dof/src/humanoid_policy/obs_builder/: obs_builder.py
deployment/unitree_g1_ros2_29dof/src/humanoid_policy/utils/: maths.py  remote_controller_filter.py
deployment/unitree_g1_ros2_29dof/src/launch/: holomotion_29dof_launch.py
deployment/unitree_g1_ros2_29dof/src/src/: main_node.cpp
docs/: environment_setup.md  evaluate_motion_tracking.md  holomotion_motion_file_spec.md  motion_retargeting.md  mujoco_sim2sim.md  realworld_deployment.md  smpl_data_curation.md  train_motion_tracking.md
environments/: environment_deploy.yaml  environment_train_isaaclab_cu118.yaml  environment_train_isaaclab_cu128.yaml  requirements_deploy.txt
holomotion/config/env/rewards/motion_tracking/: rew_motion_tracking.yaml
holomotion/config/env/terrain/: isaaclab_plane.yaml  isaaclab_rough_lite.yaml
holomotion/config/evaluation/: eval_isaaclab.yaml
holomotion/scripts/training/: train_velocity_tracking.sh
holomotion/src/algo/: ppo.py
holomotion/src/env/isaaclab_components/: isaaclab_motion_tracking_command.py  isaaclab_rewards.py  isaaclab_terrain.py
holomotion/src/evaluation/: eval_motion_tracking_single.py  metrics.py
holomotion/src/training/: h5_dataloader.py
